# verapp-cmake

./: .travis.yml  CMakeLists.txt  DEPENDENCIES  DICTIONARY  FindVERAPP.cmake  FindVeraPP.cmake  LICENCE.md  PACKAGES.Ubuntu.precise  README.md  REPOSITORIES.Ubuntu.precise  VeraPPUtilities.cmake  appveyor.yml  biicode.conf  conanfile.py
src/: CMakeLists.txt  exit_failure_on_stderr_wrapper.cpp
test/: CMakeLists.txt  CheckConformanceForLibraryTarget.cmake  CheckConformanceForLibraryTargetVerify.cmake  CheckConformanceForSources.cmake  CheckConformanceForSourcesErrorMode.cmake  CheckConformanceForSourcesErrorModeVerify.cmake  CheckConformanceForSourcesStampfileGenerated.cmake  CheckConformanceForSourcesStampfileGeneratedVerify.cmake  CheckConformanceForSourcesTargetCreated.cmake  CheckConformanceForSourcesVerify.cmake  CheckConformanceForTarget.cmake  CheckConformanceForTargetErrorMode.cmake  CheckConformanceForTargetErrorModeVerify.cmake  CheckConformanceForTargetGenerated.cmake  CheckConformanceForTargetGeneratedVerify.cmake  CheckConformanceForTargetNoGenerated.cmake  CheckConformanceForTargetNoGeneratedVerify.cmake  CheckConformanceForTargetVerify.cmake  CopyFilesInDirToSubdirOnTarget.cmake  CopyFilesInDirToSubdirOnTargetVerify.cmake  CopyFilesInDirToSubdirOnTargetWithComment.cmake  CopyFilesInDirToSubdirOnTargetWithCommentVerify.cmake  ImportDefaultProfilesIntoSubdirOnTarget.cmake  ImportDefaultProfilesIntoSubdirOnTargetVerify.cmake  ImportDefaultProfilesIntoSubdirOnTargetWithComment.cmake  ImportDefaultProfilesIntoSubdirOnTargetWithCommentVerify.cmake  ImportDefaultRulesIntoSubdirOnTarget.cmake  ImportDefaultRulesIntoSubdirOnTargetVerify.cmake  ImportDefaultRulesIntoSubdirOnTargetWithComment.cmake  ImportDefaultRulesIntoSubdirOnTargetWithCommentVerify.cmake  ImportDefaultTransformationsIntoSubdirOnTarget.cmake  ImportDefaultTransformationsIntoSubdirOnTargetVerify.cmake  ImportDefaultTransformationsIntoSubdirOnTargetWithComment.cmake  ImportDefaultTransformationsIntoSubdirOnTargetWithCommentVerify.cmake  ListFilesInExternalDirectory.cmake  ListFilesInExternalDirectoryMatching.cmake  SourcesConformanceNotRunIfStampfileExists.cmake  SourcesConformanceNotRunIfStampfileExistsVerify.cmake  SourcesConformanceReRunIfSourcesUpdated.cmake  SourcesConformanceReRunIfSourcesUpdatedVerify.cmake
